  - DOC: Fix bibtex references of user's guide and reference manual.
  - CHG: indiviudal::arrGenotype, individual::arrInfo are marked obsolete
		and will be removed later.
  - NEW: add individual::genotype (previously called arrGenotype) and
		individual::arrGenotype.
  - CHG: genoStruTrait::arrLociPos is marked obsolete and will be removed
		later.

version 0.8.7 - (Rev 1755) Aug 29, 2008
  - NEW: allow the use of a list to specify a virtual subpopulation.
  - NEW: change the return type of allele() so that no boolean value (True or False)
		will be returned from the binary modules.
  - DOC: Correct documentation about variables related to genotype and heterozygote frequency.
  - BUG: Fix a bug when a zero-sized virtual subpopulation has weight -1.
  - BUG: Fix a bug when calculating expected heterozygosity with increased
		number of subpopulations.
  - BUG: Fix a bug in controlled random mating where number of affected alleles
		are calculated from current instead of offspring populations.
  - CHG: Only write (compressed if possible) in text format. simuPOP can still
		read binary and xml formats.
  - BUG: Fix a bug that is related to the calculation of Fst in populations with
		unordered individuals.
  - BUG: Fix activation and deactivation of combinedVirtualSplitter.
  - BUG: Fix a bug that prevents simuPOP from compressing population files.
  - NEW: Make boost 1.36.0 the default built-in boost version.
  - BUG: Fix a carray genotype slice assignment bug under windows and python2.5.
  - NEW: Stop distributing zlib1.dll by building zlib from source under
		windows.

version 0.8.6 - (Rev 1666) Jun 20, 2008
  - NEW: Polish command line arguments output in a configuration file.
  - NEW: add a function ForwardFreqTrajetory to simulate trajectory of varying
		population size and selection pressure.
  - BUG: Fix a minor simuOpt::saveConfigFile bug
  - BUG: reveal RNG::randMultinomial and RNG::randMultinomialVar