@@ -16,6 +16,9 @@ version 0.8.8 - Not released, available at https://simupop.svn.sourceforge.net/s
 		individual::arrGenotype.
   - CHG: genoStruTrait::arrLociPos is marked obsolete and will be removed
 		later.
+  - CHG: population arrGenotype are marked obsolete and will be removed
+		later.
+  - NEW: add population::genotype and population::setGenoytpe.
 
 version 0.8.7 - (Rev 1755) Aug 29, 2008
   - NEW: allow the use of a list to specify a virtual subpopulation.
